<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sky_blue"
    android:padding="@dimen/padding_default"
    tools:context="com.karhoo.samples.uisdk.components.quotes.TripQuotesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/quotes_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        android:padding="@dimen/padding_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/loadingProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/header_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/quotes_header"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.karhoo.uisdk.screen.booking.supplier.SupplierListView
            android:id="@+id/supplier_list_widget"
            android:layout_width="0dp"
            android:layout_height="@dimen/collapsible_pane_expanded_height"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/get_quotes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:background="@color/dark_blue"
        android:padding="@dimen/padding_text"
        android:text="@string/retrieve_quotes"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quotes_layout" />

    <Button
        android:id="@+id/stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:padding="@dimen/padding_text"
        android:background="@color/dark_blue"
        android:text="@string/stop"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quotes_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>